[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/game_graph/editor/dialog_list/GameGraphEditorDialogList.gd" type="Script" id=1]
[ext_resource path="res://addons/game_graph/assets/icon_search.svg" type="Texture" id=2]
[ext_resource path="res://addons/game_graph/assets/icon_new.svg" type="Texture" id=3]

[node name="DialogList" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 200, 0 )
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 1024.0
margin_bottom = 595.0

[node name="Filter" type="LineEdit" parent="Container"]
margin_right = 1019.0
margin_bottom = 24.0
size_flags_horizontal = 3
clear_button_enabled = true
placeholder_text = "Filter"
caret_blink = true

[node name="Magnifier" type="TextureRect" parent="Container/Filter"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -16.0
margin_bottom = 16.0
texture = ExtResource( 2 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New" type="ToolButton" parent="Container"]
margin_top = 28.0
margin_right = 101.0
margin_bottom = 52.0
size_flags_horizontal = 0
text = "New dialog"
icon = ExtResource( 3 )

[node name="Scroll" type="ScrollContainer" parent="Container"]
margin_top = 56.0
margin_right = 1019.0
margin_bottom = 590.0
size_flags_vertical = 3

[node name="Margin" type="PanelContainer" parent="Container/Scroll"]
margin_right = 1019.0
margin_bottom = 534.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DialogsList" type="VBoxContainer" parent="Container/Scroll/Margin"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1012.0
margin_bottom = 527.0
custom_constants/separation = 0
[connection signal="text_changed" from="Container/Filter" to="." method="_on_Filter_text_changed"]
[connection signal="pressed" from="Container/New" to="." method="_on_New_pressed"]
